--- a/css/styles.css
+++ b/css/styles.css
@@ -9,14 +9,14 @@
   min-height: 400px; }
 
 .footer {
-  background-color: #D1C4E9;
+  background-color: #B2DFDB;
   margin: 0px auto;
   padding: 20px 0px; }
 
 .jumbotron {
   margin: 0px auto;
   padding: 70px 30px;
-  background: #9575CD;
+  background: #009688;
   color: floralwhite; }
 
 address {
@@ -29,7 +29,7 @@ body {
   z-index: 0; }
 
 .navbar-inverse {
-  background-color: #512DA8; }
+  background-color: #00796B; }
 
 .tab-content {
   border-left: 1px solid #ddd;
@@ -38,7 +38,7 @@ body {
   padding: 10px; }
 
 .carousel {
-  background: #512DA8; }
+  background: #00796B; }
   .carousel .carousel-item {
     height: 300px; }
     .carousel .carousel-item img {
@@ -48,6 +48,6 @@ body {
       min-height: 300px; }
 
 #carousel-button {
-  right: 0px;
+  right: 0;
   position: absolute;
-  bottom: 0px; }
+  bottom: 0; }
